calico-enterprise_versioned_docs/version-3.16/getting-started/install-on-clusters/private-registry/private-registry-regular.mdx
---
description: Install and configure Calico Enterprise in a private registry.
---

import variables from '@site/calico-enterprise_versioned_docs/version-3.16/variables';

# Install from a private registry

## Big picture

Move Calico Enterprise container images to a private registry and configure {variables.prodname} to pull images from it.

## Value

Install Calico Enterprise in clusters where pulling from third party private repos is not an option, such as air-gapped clusters, or clusters with bandwidth constraints or security constraints.

## Concepts

A **container image registry** (often referred to as a **registry**) is a service where container images are pushed to, stored, and pulled from. A registry is said to be "private" if it requires users authenticate before accessing images.

An **image pull secret** is used in Kubernetes to deploy container images from a private container image registry.

## Before you begin...

- Configure pull access to your private registry
- [Configure pull access to Tigera's private container registry](../calico-enterprise.mdx#get-private-registry-credentials-and-license-key).
- Use the [Crane command](https://github.com/google/go-containerregistry/blob/main/cmd/crane/README.md) to manage the {variables.prodnameWindows} images, as using `docker pull` commands for these images may not work depending on the operating system and version in which the commands are run.

## How to

- [Push {variables.prodname} images to your private registry](#push-calico-enterprise-images-to-your-private-registry)
- [Run the operator using images from your private registry](#run-the-operator-using-images-from-your-private-registry)
- [Configure the operator to use images from your private registry](#configure-the-operator-to-use-images-from-your-private-registry)

<PrivateRegistryRegular />

:::note

See [Install from an image path in a private registry](private-registry-image-path.mdx#big-picture) page for more information on installing using a private registry image path.

:::

:::note

See [the Installation resource reference page](../../../reference/installation/api.mdx) for more information on the `imagePullSecrets` and `registry` fields.

:::
